# oama

./: .build.yml  .builds.yml  .gitignore  .woodpecker.yml  LICENSE  License  Makefile  README.md  Readme.md  Release.md  build.yaml  cabal.project  flake.nix  fourmolu.yaml  justfile  mailctl.cabal  oama.cabal  secret-libs.project  secret-tools.project
.builds/: with-ghc-4.4.4.yml
.github/workflows/: aur.yaml  build.yaml  build.yml  release.yml
.woodpecker/: build-mailctl-amd64.yml  build-mailctl.yml
app/: Main.hs
aur/: PKGBUILD
completions/: Makefile  mailctl.bash  mailctl.fish  mailctl.zsh  oama.bash  oama.fish  oama.zsh
configs/: config-template.json  config-template.yaml  fdm-config-template.conf  mailctl-config-template.json  msmtp-config-template  services-template.json  services-template.yaml
lib/Crypto/: Manager.hs
lib/MailCtl/: Authorization.hs  CommandLine.hs  Environment.hs  Utilities.hs
lib/OAMa/: Authorization.hs  CommandLine.hs  Environment.hs  Logging.hs  OpenID.hs  PKCE.hs  Utilities.hs
lib/gnupg/gpg-tool/: GnuPG.hs
lib/gnupg/gpgme/: GnuPG.hs
lib/keyring/libsecret/: Keyring.hs
lib/keyring/secret-tool/: Keyring.hs
lib/oama/OAMa/: Authorization.hs  CommandLine.hs  Environment.hs
