cabal-version:      3.8
name:               mailctl
version:            0.8.9
license:            BSD-3-Clause
license-file:       LICENSE
author:             Peter Dobsan
maintainer:         pdobsan@gmail.com
extra-source-files:
data-files:

common common
  default-language: Haskell2010
  build-depends:
    -- see https://github.com/snoyberg/yaml/issues/219
    aeson < 2.2,
    base >=4.16,
    bytestring,
    containers,
    directory,
    hsyslog,
    http-conduit,
    network-uri,
    optparse-applicative,
    pretty-simple,
    process,
    template-haskell,
    text,
    time,
    twain,
    utf8-string,
    warp,
    yaml,
  ghc-options:
    -Wall

library
  import:         common
  hs-source-dirs: lib
  other-modules:  Paths_mailctl
  autogen-modules: Paths_mailctl
  exposed-modules:
    MailCtl.Authorization,
    MailCtl.CommandLine,
    MailCtl.Environment,
    MailCtl.Utilities,

executable mailctl
  import:         common
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    mailctl,
  ghc-options:
    -rtsopts
    -threaded
