cabal-version:      3.12
name:               oama
version:            0.17
license:            BSD-3-Clause
license-file:       License
author:             Peter Dobsan
maintainer:         pdobsan@gmail.com
extra-source-files:
data-files:

flag libsecret
  description: Use the libsecret API to keyrings
  default: True
  manual: True

flag gpgme
  description: Use the gpgme API to GnuPG
  default: True
  manual: True

common common
  default-language: Haskell2010
  build-depends:
    aeson,
    base >=4.16,
    bytestring,
    containers,
    directory,
    hsyslog,
    http-conduit,
    http-types,
    mtl,
    network,
    network-uri,
    optparse-applicative,
    pretty-simple,
    process,
    streaming-commons,
    string-qq,
    strings,
    text,
    time,
    twain >=2.2.0.1,
    unix,
    utf8-string,
    warp,
    yaml,

  if flag(libsecret)
    build-depends:
      gi-gio == 2.0.*,
      gi-secret >= 0.0.19,
  if flag(gpgme)
    build-depends:
      h-gpgme,

  ghc-options:
    -Wall

library
  import:         common
  hs-source-dirs: lib/oama
  other-modules:  Paths_oama
  autogen-modules: Paths_oama
  exposed-modules:
    OAMa.Authorization
    OAMa.CommandLine
    OAMa.Environment
    Keyring
    GnuPG
  if flag(libsecret)
    hs-source-dirs: lib/keyring/libsecret
  else
    hs-source-dirs: lib/keyring/secret-tool
  if flag(gpgme)
    hs-source-dirs: lib/gnupg/gpgme
  else
    hs-source-dirs: lib/gnupg/gpg-tool

executable oama
  import:         common
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    oama,
  ghc-options:
    -rtsopts
    -threaded
