cabal-version:      3.12
name:               oama
version:            0.18.1
license:            BSD-3-Clause
license-file:       License
author:             Peter Dobsan
maintainer:         pdobsan@gmail.com
extra-source-files:
data-files:

flag secret-libs
  description: Use the libsecret and gpgme API-s
  default: False
  manual: True

common common
  default-language: Haskell2010
  build-depends:
    aeson,
    base >=4.17,
    bytestring,
    containers,
    directory,
    hsyslog,
    http-conduit,
    http-types,
    mtl,
    network,
    network-uri,
    optparse-applicative,
    pretty-simple,
    process,
    streaming-commons,
    string-qq,
    strings,
    text,
    time,
    twain >=2.2.0.1,
    unix,
    utf8-string,
    warp,
    yaml,
  if flag(secret-libs)
    cpp-options: -DSECRET_LIBS
    build-depends:
      gi-gio,
      gi-secret,
      h-gpgme,

  ghc-options:
    -Wall

library
  import:         common
  hs-source-dirs: lib
  other-modules:
    Paths_oama
    Crypto.Manager
  autogen-modules: Paths_oama
  exposed-modules:
    OAMa.Authorization
    OAMa.CommandLine
    OAMa.Environment

executable oama
  import:         common
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    oama,
  ghc-options:
    -rtsopts
    -threaded
