cabal-version:      3.12
name:               oama
version:            0.22.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Peter Dobsan
maintainer:         pdobsan@gmail.com
extra-source-files:
data-files:

flag lib-gpgme
  description: Use the gpgme API-s
  default: False
  manual: True

flag lib-gisecret
  description: Use the gi-secret API-s
  default: False
  manual: True

common common
  default-language: Haskell2010
  build-depends:
    aeson,
    base >=4.17,
    base64-bytestring,
    bytestring,
    containers,
    cryptohash-sha256,
    directory,
    githash,
    hsyslog,
    http-conduit,
    http-types,
    mtl,
    network,
    network-uri,
    optparse-applicative,
    pretty-simple,
    process,
    random,
    streaming-commons,
    string-qq,
    strings,
    text,
    time,
    twain >=2.2.0.1,
    unix,
    utf8-string,
    warp,
    yaml,
  if flag(lib-gpgme)
    cpp-options: -DLIB_GPGME
    build-depends:
      h-gpgme,
  if flag(lib-gisecret)
    cpp-options: -DLIB_GISECRET
    build-depends:
      gi-gio,
      gi-secret,

  ghc-options:
    -Wall

library
  import:         common
  hs-source-dirs: lib
  other-modules:
    Paths_oama
    Crypto.Manager
  autogen-modules: Paths_oama
  exposed-modules:
    OAMa.Authorization
    OAMa.CommandLine
    OAMa.Environment
    OAMa.Logging
    OAMa.OpenID
    OAMa.PKCE

executable oama
  import:         common
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    oama,
  ghc-options:
    -rtsopts
    -threaded
